Chez Scheme: initial attempt at `configure --installdoc=`

--- a/racket/src/ChezScheme/makefiles/Makefile-csug.in
+++ b/racket/src/ChezScheme/makefiles/Makefile-csug.in
@@ -1,7 +1,6 @@
-# srcdir and m are added before
+# srcdir, installdir, and m are added before
 Scheme=../bin/$m/scheme -b ../boot/$m/petite.boot -b ../boot/$m/scheme.boot
 STEXLIB=$(srcdir)/../stex
-installdir=/tmp/csug9.5
 INSTALL=$(srcdir)/../makefiles/installsh
 
 x = csug
