targets for docs mostly work

--- a/racket/src/ChezScheme/makefiles/Makefile-csug.in
+++ b/racket/src/ChezScheme/makefiles/Makefile-csug.in
@@ -1,4 +1,7 @@
-# srcdir, installdir, and m are added before
+srcdir=oops-missing-srcdir
+installdir=oops-missing-installdir
+m=oops-missing-m
+# Zuo overrides the above variables when running `make`
 Scheme=../bin/$m/scheme -b ../boot/$m/petite.boot -b ../boot/$m/scheme.boot
 STEXLIB=$(srcdir)/../stex
 INSTALL=$(srcdir)/../makefiles/installsh
